feat: add switch theme button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pangolin&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="preload-transitions" onload="document.body.classList.remove('preload-transitions');">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
